--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>MovieDB</title>
+    <link rel="shortcut icon" href="./images/Logo.png" type="image/x-icon" />
+
+    
 
 
     <title>Login</title>
